# neto-homeworks

basic_level/homework_02/01/: CMakeLists.txt  main.cpp
basic_level/homework_02/02/: CMakeLists.txt  main.cpp
basic_level/homework_02/03/: CMakeLists.txt  main.cpp
basic_level/homework_03/01/: CMakeLists.txt  Calculator.hpp  main.cpp
basic_level/homework_03/01/include/: Calculator.hpp
basic_level/homework_03/01/src/: Calculator.cpp
basic_level/homework_03/02/: CMakeLists.txt  Counter.hpp  main.cpp
basic_level/homework_03/02/include/: Counter.hpp
basic_level/homework_03/02/src/: Counter.cpp
basic_level/homework_04/01/: CMakeLists.txt  TextFormatting.cpp  TextFormatting.hpp  main.cpp
basic_level/homework_04/01/include/: AddressFormat.hpp
basic_level/homework_04/01/src/: AddressFormat.cpp
basic_level/homework_04/02/: CMakeLists.txt  main.cpp
basic_level/homework_04/02/files/: input.txt
basic_level/homework_04/02/include/: AddressSort.hpp
basic_level/homework_04/02/src/: AddressSort.cpp
basic_level/homework_05/01/: CMakeLists.txt  main.cpp
basic_level/homework_05/02/: CMakeLists.txt  main.cpp
basic_level/homework_05/03/: CMakeLists.txt  main.cpp
basic_level/homework_06/01/: CMakeLists.txt  main.cpp
basic_level/homework_06/01/include/: MathFunctions.hpp
basic_level/homework_06/01/src/: MathFunctions.cpp
basic_level/homework_06/02/: CMakeLists.txt  main.cpp
basic_level/homework_06/02/include/: Calculator.hpp
basic_level/homework_06/02/src/: Calculator.cpp
basic_level/homework_06/03/: CMakeLists.txt  main.cpp
basic_level/homework_06/03/include/base/: IShape.hpp
basic_level/homework_06/03/include/quadrilaterals/: AQuadrilateral.hpp  QHeadersList.hpp  Rectangle.hpp  Square.hpp
basic_level/homework_06/03/include/triangulars/: ATriangular.hpp  RightTriangle.hpp  THeadersList.hpp  Triangle.hpp
basic_level/homework_06/03/src/quadrilaterals/: AQuadrilateral.cpp
basic_level/homework_06/03/src/triangulars/: ATriangular.cpp  RightTriangle.cpp
basic_level/homework_07/01/: CMakeLists.txt  main.cpp
basic_level/homework_07/02/: CMakeLists.txt  main.cpp
basic_level/homework_08/01/: CMakeLists.txt  main.cpp
basic_level/homework_08/02/: CMakeLists.txt  main.cpp
basic_level/homework_09/01/: CMakeLists.txt  main.cpp
basic_level/homework_09/02/: CMakeLists.txt  main.cpp
basic_level/homework_10/01/: CMakeLists.txt  main.cpp
basic_level/homework_10/02/: CMakeLists.txt  main.cpp
basic_level/other/01/: CMakeLists.txt  main.cpp
basic_level/other/01/include/: Descriptor.hpp  IShape.hpp
entry_level/other/: main.cpp
(+17 files in other folders)
